Further NYC analysis

--- a/src/analysis.ipynb
+++ b/src/analysis.ipynb
@@ -439,19 +439,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Within NYC\n",
       "Alternative Hypothesis: dogs from Staten Island are bolder than other dogs in New York.\n",
       "Ttest_indResult(statistic=3.435544629492364, pvalue=0.0006561220278463945)\n",
       "Alternative Hypothesis: dogs from Staten Island are calmer than other dogs in New York.\n",
       "Ttest_indResult(statistic=3.8462844628779225, pvalue=0.00014058887400346439)\n",
+      "Alternative Hypothesis: dogs from the Bronx and Queens are less trainable than other dogs in New York.\n",
+      "Ttest_indResult(statistic=-3.6776787933646577, pvalue=0.00024297855631091766)\n",
+      "Alternative Hypothesis: dogs from the Bronx and Queens are less sociable than other dogs in New York.\n",
+      "Ttest_indResult(statistic=5.016642884768564, pvalue=5.792384672685577e-07)\n",
+      "Null Hypothesis: The average boldness of dogs in Brooklyn is the same as the average boldness for other New York dogs.\n",
+      "Alternative Hypothesis: The average boldness of Brooklyn and other New York dogs is different.\n",
+      "Ttest_indResult(statistic=2.959475935883241, pvalue=0.0032664992331622395)\n",
+      "Null Hypothesis: The average trainability of dogs in Brooklyn is the same as the average trainability for other New York dogs.\n",
+      "Alternative Hypothesis: The average trainability of Brooklyn and other New York dogs is different.\n",
+      "Ttest_indResult(statistic=0.7364962981266531, pvalue=0.46158549593741727)\n",
+      "Null Hypothesis: The average calmness of dogs in Brooklyn is the same as the average calmness for other New York dogs.\n",
+      "Alternative Hypothesis: The average calmness of Brooklyn and other New York dogs is different.\n",
+      "Ttest_indResult(statistic=0.13547935733175062, pvalue=0.8922575217817732)\n",
+      "Null Hypothesis: The average sociability of dogs in Brooklyn is the same as the average sociability for other New York dogs.\n",
+      "Alternative Hypothesis: The average sociability of Brooklyn and other New York dogs is different.\n",
+      "Ttest_indResult(statistic=0.5233714847620748, pvalue=0.6008203210733493)\n",
+      "\n",
+      "NYC vs. Seattle\n",
+      "Null Hypothesis: The average boldness of dogs in NYC is the same as the boldness for Seattle dogs.\n",
+      "Alternative Hypothesis: The average boldness of NYC and Seattle dogs is different.\n",
+      "Ttest_indResult(statistic=1.3816790300745592, pvalue=0.16713429452424194)\n",
+      "Alternative Hypothesis: Seattle dogs are more trainable than NYC dogs.\n",
+      "Ttest_indResult(statistic=-22.594502523719232, pvalue=1.6044086293566053e-106)\n",
+      "Alternative Hypothesis: Seattle dogs are more sociable than NYC dogs.\n",
+      "Ttest_indResult(statistic=-10.76170823736474, pvalue=1.1561760697728189e-26)\n",
+      "\n",
+      "NYC vs. the world\n",
       "Alternative Hypothesis: dogs from New York are bolder than dogs in Adelaide and Edmonton.\n",
       "Ttest_indResult(statistic=6.039372226991816, pvalue=1.7169589349976154e-09)\n",
+      "\n",
+      "Edmonton vs. the world\n",
       "Alternative Hypothesis: dogs from Edmonton are more obedient than dogs\n",
       " in Adelaide and New York.\n",
       "Ttest_indResult(statistic=-16.577408935991556, pvalue=9.746066231426407e-60)\n"
@@ -460,6 +490,7 @@
    ],
    "source": [
     "# Perform hypothesis tests on data\n",
+    "print('Within NYC')\n",
     "print('Alternative Hypothesis: dogs from Staten Island are bolder than other dogs in New York.')\n",
     "\n",
     "non_staten = nyc_attrib[nyc_attrib['Borough'].isin(['Manhattan', 'Queens', 'Bronx', 'Brooklyn'])]\n",
@@ -475,11 +506,74 @@
     "staten_calm = staten['Calm']\n",
     "print(stats.ttest_ind(staten_calm, non_staten_calm, equal_var = False))\n",
     "\n",
-    "## MORE\n",
+    "print('Alternative Hypothesis: dogs from the Bronx and Queens are less trainable than other dogs in New York.')\n",
+    "non_bronxq = nyc_attrib[nyc_attrib['Borough'].isin(['Manhattan', 'Staten Island', 'Brooklyn'])]\n",
+    "non_bronxq.dropna(inplace=True)\n",
+    "non_bronxq_trainable = non_bronxq['Trainable']\n",
+    "bronxq = nyc_attrib[nyc_attrib['Borough'].isin(['Queens', 'Bronx'])]\n",
+    "bronxq.dropna(inplace=True)\n",
+    "bronxq_trainable = bronxq['Trainable']\n",
+    "print(stats.ttest_ind(bronxq_trainable, non_bronxq_trainable, equal_var = False))\n",
+    "\n",
+    "print('Alternative Hypothesis: dogs from the Bronx and Queens are less sociable than other dogs in New York.')\n",
+    "non_bronxq_sociable = non_bronxq['Sociable']\n",
+    "bronxq_sociable = bronxq['Sociable']\n",
+    "print(stats.ttest_ind(non_bronxq_sociable, bronxq_sociable, equal_var = False))\n",
+    "\n",
+    "print('Null Hypothesis: The average boldness of dogs in Brooklyn is the same as the average boldness for other New York dogs.')\n",
+    "print('Alternative Hypothesis: The average boldness of Brooklyn and other New York dogs is different.')\n",
+    "non_brooklyn = nyc_attrib[nyc_attrib['Borough'].isin(['Manhattan', 'Queens', 'Bronx', 'Staten Island'])]\n",
+    "non_brooklyn.dropna(inplace=True)\n",
+    "non_brooklyn_bold = non_brooklyn['Bold']\n",
+    "brooklyn = nyc_attrib[nyc_attrib['Borough'] == 'Brooklyn']\n",
+    "brooklyn.dropna(inplace=True)\n",
+    "brooklyn_bold = staten['Bold']\n",
+    "print(stats.ttest_ind(brooklyn_bold, non_brooklyn_bold, equal_var = False))\n",
+    "\n",
+    "\n",
+    "print('Null Hypothesis: The average trainability of dogs in Brooklyn is the same as the average trainability for other New York dogs.')\n",
+    "print('Alternative Hypothesis: The average trainability of Brooklyn and other New York dogs is different.')\n",
+    "non_brooklyn_trainable = non_brooklyn['Trainable']\n",
+    "brooklyn_trainable = brooklyn['Trainable']\n",
+    "print(stats.ttest_ind(non_brooklyn_trainable, brooklyn_trainable, equal_var = False))\n",
+    "\n",
+    "print('Null Hypothesis: The average calmness of dogs in Brooklyn is the same as the average calmness for other New York dogs.')\n",
+    "print('Alternative Hypothesis: The average calmness of Brooklyn and other New York dogs is different.')\n",
+    "non_brooklyn_calm = non_brooklyn['Calm']\n",
+    "brooklyn_calm = brooklyn['Calm']\n",
+    "print(stats.ttest_ind(non_brooklyn_calm, brooklyn_calm, equal_var = False))\n",
+    "\n",
+    "print('Null Hypothesis: The average sociability of dogs in Brooklyn is the same as the average sociability for other New York dogs.')\n",
+    "print('Alternative Hypothesis: The average sociability of Brooklyn and other New York dogs is different.')\n",
+    "non_brooklyn_sociable = non_brooklyn['Sociable']\n",
+    "brooklyn_sociable = brooklyn['Sociable']\n",
+    "print(stats.ttest_ind(non_brooklyn_sociable, brooklyn_sociable, equal_var = False))\n",
+    "\n",
+    "print('\\nNYC vs. Seattle')\n",
+    "print('Null Hypothesis: The average boldness of dogs in NYC is the same as the boldness for Seattle dogs.')\n",
+    "print('Alternative Hypothesis: The average boldness of NYC and Seattle dogs is different.')\n",
+    "seattle_bold = seattle_attrib['Bold']\n",
+    "seattle_bold.dropna(inplace=True)\n",
+    "print(stats.ttest_ind(nyc_bold, seattle_bold, equal_var = False))\n",
+    "\n",
+    "print('Alternative Hypothesis: Seattle dogs are more trainable than NYC dogs.')\n",
+    "seattle_trainable = seattle_attrib['Trainable']\n",
+    "seattle_trainable.dropna(inplace=True)\n",
+    "nyc_trainable = nyc_attrib['Trainable']\n",
+    "nyc_trainable.dropna(inplace=True)\n",
+    "print(stats.ttest_ind(nyc_trainable, seattle_trainable, equal_var = False))\n",
+    "\n",
+    "print('Alternative Hypothesis: Seattle dogs are more sociable than NYC dogs.')\n",
+    "seattle_sociable = seattle_attrib['Sociable']\n",
+    "seattle_sociable.dropna(inplace=True)\n",
+    "nyc_sociable = nyc_attrib['Sociable']\n",
+    "nyc_sociable.dropna(inplace=True)\n",
+    "print(stats.ttest_ind(nyc_sociable, seattle_sociable, equal_var = False))\n",
+    "\n",
+    "print('\\nNYC vs. the world')\n",
     "print('Alternative Hypothesis: dogs from New York are bolder than dogs in Adelaide and Edmonton.')\n",
     "adelaide_attrib = adelaide_registry.set_index('AnimalBreed').join(attrib, how='left')\n",
     "edmonton_attrib = edmonton_registry.set_index('BREED').join(attrib, how='left')\n",
-    "seattle_attrib = seattle_registry.set_index('Primary Breed').join(attrib, how='left')\n",
     "nyc_bold = nyc_attrib['Bold']\n",
     "nyc_bold.dropna(inplace=True)\n",
     "ad_ed_attrib = pd.concat([adelaide_attrib, edmonton_attrib])\n",
@@ -487,6 +581,7 @@
     "ad_ed_bold.dropna(inplace=True)\n",
     "print(stats.ttest_ind(nyc_bold, ad_ed_bold, equal_var = False))\n",
     "\n",
+    "print('\\nEdmonton vs. the world')\n",
     "print('Alternative Hypothesis: dogs from Edmonton are more obedient than dogs\\n \\\n",
     "in Adelaide and New York.')\n",
     "nyc_obedient = nyc_attrib['Obedient']\n",
